# hangman

./: Hangman.cabal  README.md  hangman.cabal
src/: Main.hs  Puzzle.hs
tests/: tests.hs
