name:                Hangman
version:             0.1.0.0
synopsis:            Playing hangman
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules: Puzzle
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5, random
  hs-source-dirs: src
  default-language: Haskell2010

executable Hangman
  hs-source-dirs:      src
  ghc-options: -Wall -fwarn-tabs
  main-is:             Main.hs
  other-modules: Puzzle
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:       base >= 4.7 && < 5, Hangman, hspec
  default-language: Haskell2010